--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,9 @@ Jinja2==2.8
 Mako==1.0.6
 MarkupSafe==0.23
 MySQL-python==1.2.5
+nose2==0.6.5
 python-editor==1.0.3
+selenium==3.0.2
 six==1.10.0
 SQLAlchemy==1.1.4
 visitor==0.1.3
